--- a/DEMO/DwServer/RestDWServerProject.dproj
+++ b/DEMO/DwServer/RestDWServerProject.dproj
@@ -146,6 +146,7 @@
             <Form>WebModule1</Form>
             <DesignClass>TWebModule</DesignClass>
         </DCCReference>
+        <DCCReference Include="..\..\uRESTBridge.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
