--- a/RestEasyObjectsResource.rc
+++ b/RestEasyObjectsResource.rc
@@ -2,3 +2,4 @@ TRESTClientSQL BITMAP "TRESTClientSQL.bmp"
 TRESTDataBase BITMAP "TRESTDataBase.bmp"
 TRESTPoolerDB BITMAP "TRESTPoolerDB.bmp"
 TRESTPoolerList BITMAP "TRESTPoolerList.bmp"
+TRESTStoredProc BITMAP "TRESTStoredProc.bmp"
